--- a/src/main/resources/templates/02/index.html
+++ b/src/main/resources/templates/02/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form hx-post="/02/loadUrl"
+          hx-target="#iframe-container"
+          hx-swap="outerHTML"
+          class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
             <label for="url" class="block text-gray-700 text-sm font-bold mb-2">
                 URL
